<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/colorHead"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="@font/langar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:text="@string/default_karttype"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/defaultMapTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorChooseMap"
                android:dropDownWidth="wrap_content"
                android:gravity="center_vertical"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/dark_mode"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/theme_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButton"
                android:text="@string/dm"
                android:textAllCaps="false"
                android:textColor="@color/colorText"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/reset_my_places"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/settings_reset_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButton"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textColor="@color/colorText"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorLine" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorLine" />

    </LinearLayout>
</ScrollView>