<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:elevation="10dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/tv_station_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_station_measured_v"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/measured_values"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/ll_station_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <ProgressBar
            android:id="@+id/pb_station"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_station_updated_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/last_updated"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_station_updated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_live_seemore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/more" />

</LinearLayout>