<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/loadbar_popup"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/info_popup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    tools:visibility="visible">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/popup_txt2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/aqi" />

                        <TextView
                            android:id="@+id/popup_val2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/popup_txt3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/pm10" />

                        <TextView
                            android:id="@+id/popup_val3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/popup_txt4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/pm25" />

                        <TextView
                            android:id="@+id/popup_val4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/popup_txt5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/no2" />

                        <TextView
                            android:id="@+id/popup_val5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/popup_txt6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/o3" />

                        <TextView
                            android:id="@+id/popup_val6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center" />
                    </TableRow>

                </TableLayout>
            </ScrollView>

            <TextView
                android:id="@+id/popup_last_updated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/popup_areacode_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:entries="@array/areaclasses"
                android:gravity="center"
                android:spinnerMode="dialog" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/see_more_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/more" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>