<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/home_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textColor="@color/colorHead"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/home_image"
        app:layout_constraintStart_toStartOf="@+id/home_image"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/lobster"
        />

    <ImageView
        android:id="@+id/home_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintBottom_toTopOf="@+id/home_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_text"
        app:layout_constraintVertical_weight="0.2" />

    <LinearLayout
        android:id="@+id/home_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_image"
        app:layout_constraintVertical_weight="0.8">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/my_places"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:fontFamily="@font/langar"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hold_to_edit"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="12sp"
            android:paddingBottom="30dp"
            android:textAllCaps="true"
            android:textStyle="italic"/>

        <LinearLayout
            android:id="@+id/err_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <ScrollView
            android:id="@+id/home_sw1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/row_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/home_row1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"/>

                <LinearLayout
                    android:id="@+id/home_row2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"/>

            </LinearLayout>
        </ScrollView>

        <include
            android:id="@+id/home_my_location"
            layout="@layout/cardview_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/home_frg_container"
        android:name="com.example.airboyz.ui.map.SeeMoreFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.fragment.app.FragmentContainerView>
</androidx.constraintlayout.widget.ConstraintLayout>